--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - laravel: 10.*
+            php: 8.2
+            testbench: ^7.0
+            stability: prefer-stable
+          - laravel: 10.*
+            php: 8.1
+            testbench: ^7.0
+            stability: prefer-stable
           - laravel: 9.*
             php: 8.1
             testbench: ^7.0
